--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="17"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="com.foodtracker.app.activity.FoodTrackerActivity"
                   android:label="@string/app_name">
@@ -12,5 +14,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name">
+        </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id" />
+
     </application>
 </manifest>
